--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://jeffersonyabut.github.io/Prizzabooth",
+  "homepage": "https://jeffersonyabut.github.io/Prizzabooth/",
   "name": "jeffsbooth",
   "private": true,
   "version": "0.0.0",
